--- a/package.json
+++ b/package.json
@@ -21,9 +21,17 @@
     "test:e2e": "jest --config ./apps/fdo-gateway/test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/federation": "^0.37.1",
+    "@apollo/gateway": "^2.1.3",
+    "@apollo/subgraph": "^2.1.3",
+    "@nestjs/apollo": "^10.1.3",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^10.1.3",
     "@nestjs/platform-express": "^8.0.0",
+    "apollo-server-express": "^3.10.3",
+    "graphql": "^16.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -48,7 +56,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "webpack": "^5.74.0"
   },
   "jest": {
     "moduleFileExtensions": [
