--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.1.3",
+    "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^8.0.0",
     "apollo-server-express": "^3.10.3",
     "graphql": "^16.6.0",
+    "mongoose": "^6.6.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
