--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es2017",
+    "target": "es2022",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
@@ -18,30 +18,16 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@lib/fdo-database": [
-        "libs/fdo-database/src"
-      ],
-      "@lib/fdo-database/*": [
-        "libs/fdo-database/src/*"
-      ],
-      "@lib/fdo-graphql": [
-        "libs/fdo-graphql/src"
-      ],
-      "@lib/fdo-graphql/*": [
-        "libs/fdo-graphql/src/*"
-      ],
-      "@lib/fdo-logger": [
-        "libs/fdo-logger/src"
-      ],
-      "@lib/fdo-logger/*": [
-        "libs/fdo-logger/src/*"
-      ],
-      "@lib/fdo-service": [
-        "libs/fdo-service/src"
-      ],
-      "@lib/fdo-service/*": [
-        "libs/fdo-service/src/*"
-      ]
+      "@lib/fdo-database": ["libs/fdo-database/src"],
+      "@lib/fdo-database/*": ["libs/fdo-database/src/*"],
+      "@lib/fdo-graphql": ["libs/fdo-graphql/src"],
+      "@lib/fdo-graphql/*": ["libs/fdo-graphql/src/*"],
+      "@lib/fdo-logger": ["libs/fdo-logger/src"],
+      "@lib/fdo-logger/*": ["libs/fdo-logger/src/*"],
+      "@lib/fdo-service": ["libs/fdo-service/src"],
+      "@lib/fdo-service/*": ["libs/fdo-service/src/*"],
+      "@lib/fdo-domain": ["libs/fdo-domain/src"],
+      "@lib/fdo-domain/*": ["libs/fdo-domain/src/*"]
     }
   }
 }
