--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^8.0.0",
     "apollo-server-express": "^3.10.3",
+    "class-validator": "^0.13.2",
     "graphql": "^16.6.0",
     "mongoose": "^6.6.5",
     "reflect-metadata": "^0.1.13",
@@ -85,8 +86,8 @@
       "^@lib/fdo-database(|/.*)$": "<rootDir>/libs/fdo-database/src/$1",
       "^@lib/fdo-graphql(|/.*)$": "<rootDir>/libs/fdo-graphql/src/$1",
       "^@lib/fdo-logger(|/.*)$": "<rootDir>/libs/fdo-logger/src/$1",
-      "^@lib/fdo-service(|/.*)$": "<rootDir>/libs/fdo-service/src/$1",
-      "^@lib/fdo-domain(|/.*)$": "<rootDir>/libs/fdo-domain/src/$1"
+      "^@lib/fdo-domain(|/.*)$": "<rootDir>/libs/fdo-domain/src/$1",
+      "^@lib/fdo-utils(|/.*)$": "<rootDir>/libs/fdo-utils/src/$1"
     }
   }
 }
