--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
+    "resolveJsonModule": true,
     "paths": {
       "@lib/fdo-database": ["libs/fdo-database/src"],
       "@lib/fdo-database/*": ["libs/fdo-database/src/*"],
