--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@apollo/federation": "^0.37.1",
     "@apollo/gateway": "^2.1.3",
     "@apollo/subgraph": "^2.1.3",
+    "@nestjs-cognito/auth": "^0.2.9",
+    "@nestjs-cognito/core": "^0.2.9",
+    "@nestjs-cognito/graphql": "^0.2.9",
     "@nestjs/apollo": "^10.1.3",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.2.0",
