--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@apollo/federation": "^0.37.1",
     "@apollo/gateway": "^2.1.3",
     "@apollo/subgraph": "^2.1.3",
+    "@aws-sdk/client-cognito-identity-provider": "^3.223.0",
     "@nestjs-cognito/auth": "^0.2.9",
     "@nestjs-cognito/core": "^0.2.9",
     "@nestjs-cognito/graphql": "^0.2.9",
