--- a/apps/products-application/tsconfig.app.json
+++ b/apps/products-application/tsconfig.app.json
@@ -4,6 +4,13 @@
     "declaration": false,
     "outDir": "../../dist/apps/products-application"
   },
-  "include": ["src/**/*"],
+  "include": [
+    "src/**/*",
+    "data/config/app.config.d.ts",
+    "data/config/app.config.ts",
+    "**/config/app.config.d.ts",
+    "**/**/app.config.d.ts",
+    "*/*/app.config.d.ts"
+  ],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
 }
