--- a/apps/customers-application/tsconfig.json
+++ b/apps/customers-application/tsconfig.json
@@ -1,24 +1,11 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "declaration": true,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "target": "es2022",
-    "sourceMap": true,
-    "outDir": "./dist",
-    "baseUrl": "./",
-    "incremental": true,
-    "skipLibCheck": true,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
-    "strictBindCallApply": false,
-    "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
-    "resolveJsonModule": true,
+    "declaration": false,
+    "outDir": "../../dist/apps/customers-application",
     "paths": {
+      "~/*": ["apps/customers-application/src/*"],
+      "~/": ["apps/customers-application/src"],
       "@lib/fdo-database": ["libs/fdo-database/src"],
       "@lib/fdo-database/*": ["libs/fdo-database/src/*"],
       "@lib/fdo-graphql": ["libs/fdo-graphql/src"],
@@ -32,5 +19,7 @@
       "@lib/fdo-validator": ["libs/fdo-validator/src"],
       "@lib/fdo-validator/*": ["libs/fdo-validator/src/*"]
     }
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
 }
