--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ lerna-debug.log*
 
 # IDE - VSCode
 .vscode/*
+!.vscode/fdo-backend.code-workspace
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
